--- a/styles/numCONV.css
+++ b/styles/numCONV.css
@@ -32,6 +32,7 @@ main h1:first-child {
 }
 
 #input_div input {
+    max-width: 150px;
     outline: none;
     padding: 3px;
     margin-right: 2px;
@@ -47,6 +48,7 @@ main h1:first-child {
 }
 
 #input_div select {
+    max-width: 130px;
     background: rgb(16, 63, 151);
     color: white;
     padding: 5px;
